<project xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.vlingo</groupId>
  <artifactId>vlingo-symbio-geode</artifactId>
  <version>0.7.4</version>
  <name>vlingo-symbio-geode</name>
  <description>Implementation of vlingo-symbio for Apache Geode</description>
  <url>https://github.com/vlingo/vlingo-symbio-geode</url>
  <licenses>
    <license>
      <name>Mozilla Public License 2.0</name>
      <url>https://mozilla.org/MPL/2.0/</url>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>Dave Muirhead</name>
      <email>dave@brsg.io</email>
      <organization>Blue River Systems Group</organization>
      <organizationUrl>http://brsg.io</organizationUrl>
    </developer>
    <developer>
      <name>Vaughn Vernon</name>
      <email>vaughn@kalele.io</email>
      <organization>Kalele</organization>
      <organizationUrl>http://kalele.io</organizationUrl>
    </developer>
  </developers>
  <scm>
    <connection>scm:git:git://github.com/vlingo/vlingo-symbio-geode.git</connection>
    <developerConnection>scm:git:ssh://github.com/vlingo/vlingo-symbio-geode.git</developerConnection>
    <url>http://github.com/vlingo/vlingo-symbio-geode/tree/master</url>
  </scm>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <geode.version>1.7.0</geode.version>
   </properties>
  <build>
    <plugins>
		<plugin>
            <!-- To find latest plugin or dependency version: mvn versions:display-plugin-updates -->
		    <groupId>org.codehaus.mojo</groupId>
		    <artifactId>versions-maven-plugin</artifactId>
		    <version>2.7</version>
		    <configuration>
		        <generateBackupPoms>false</generateBackupPoms>
		    </configuration>
		</plugin>
		<plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-compiler-plugin</artifactId>
		    <version>3.8.0</version>
		    <configuration>
		        <release>10</release>
		    </configuration>
		</plugin>
		<plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-failsafe-plugin</artifactId>
		    <version>3.0.0-M2</version>
		    <configuration>
		        <!-- Allow reflection access for third party libraries -->
		        <argLine>--illegal-access=permit</argLine>
		    </configuration>
		</plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M2</version>
        <configuration>
          <systemPropertyVariables>
            <propertyName>firefox</propertyName>
          </systemPropertyVariables>
          <argLine>-Xmx1024m</argLine>
          <!-- Allow reflection access for third party libraries -->
          <argLine>--illegal-access=permit</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.0.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.0.1</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.vlingo</groupId>
      <artifactId>vlingo-common</artifactId>
      <version>0.7.4</version>
    </dependency>
    <dependency>
      <groupId>io.vlingo</groupId>
      <artifactId>vlingo-actors</artifactId>
      <version>0.7.4</version>
    </dependency>
    <dependency>
      <groupId>io.vlingo</groupId>
      <artifactId>vlingo-symbio</artifactId>
      <version>0.7.4</version>
    </dependency>
    <dependency>
      <groupId>org.apache.geode</groupId>
      <artifactId>geode-core</artifactId>
      <version>${geode.version}</version>
    </dependency>
  </dependencies>
  <distributionManagement>
    <repository>
      <id>bintray-vlingo-vlingo-platform-java</id>
      <name>vlingo-vlingo-platform-java</name>
      <url>https://api.bintray.com/maven/vlingo/vlingo-platform-java/vlingo-symbio-geode/;publish=1</url>
    </repository>
  </distributionManagement>
</project>
